--- a/src/app/modules/global/components/sidebar/sidebar.html
+++ b/src/app/modules/global/components/sidebar/sidebar.html
@@ -47,7 +47,7 @@
           </li>
           <li>
             <a (click)="navigateTo('/transactions')" pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
-              <i class="pi pi-book mr-2"></i>
+              <i class="pi pi-money-bill mr-2"></i>
               <span class="font-medium">Controle Financeiro</span>
             </a>
           </li>
