--- a/src/app/modules/imc/components/form/form.component.scss
+++ b/src/app/modules/imc/components/form/form.component.scss
@@ -1,18 +1,70 @@
 .form-container {
-  max-width: 400px;
+  max-width: 800px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 0 auto;
   padding: 20px;
   border-radius: 8px;
+  border: 1px solid #ddd;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;;
+}
+
+.result{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 .result-card{
   padding: 15px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ddd;
   text-align: center;
   margin-top: 20px;
   margin-bottom: 20px;
+  font-size: 1.5rem;
+}
+
+.tag{
+  font-size: 1.5rem;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+}
+
+.information-grid{
+  display: grid;
+  align-items: stretch;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 1fr;
+  gap: 50px;
+  margin-top: 20px;
+}
+
+.info-card{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+
+.input-group{
+  display: flex;
+  gap: 1.5rem;
+  width: 100%;
+}
+
+.input-field{
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
 .input-group p-inputNumber {
@@ -35,15 +87,15 @@ button {
   cursor: pointer;
 }
 
-.button-group p-button {
+.button-group {
+  border-radius: 8px;
+  padding: 15px;
   display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 10px;
-}
-
-.button-group{
-    display: flex;
-    justify-content: space-between;
-    gap: 10px;
+  margin-top: 20px;
+  width: 100%;
 }
 
 p-button:hover {
