--- a/src/app/modules/global/pages/register/register.html
+++ b/src/app/modules/global/pages/register/register.html
@@ -18,8 +18,8 @@
                         }
                     </div>
                     <div class="p-field">   
-                        <label for="name">Nome</label>
-                        <input id="name" type="text" pInputText placeholder="Nome" formControlName="username" required minlength="3" />
+                        <label for="name">Nome de usuário</label>
+                        <input id="name" type="text" pInputText placeholder="Nome de usuário" formControlName="username" required minlength="3" />
                     </div>
                     <div class="p-field">   
                         <label for="fullName">Nome Completo</label>
