fix: fixed eye slash position

--- a/src/app/modules/global/pages/register/register.scss
+++ b/src/app/modules/global/pages/register/register.scss
@@ -57,6 +57,7 @@ input[pInputText] {
   border: 1px solid #ccc;
   border-radius: 4px;
   font-size: 1rem;
+  width: 100%;
 }
 
 input[pInputText]:focus {
