--- a/src/app/modules/global/pages/signin/signin.html
+++ b/src/app/modules/global/pages/signin/signin.html
@@ -10,21 +10,20 @@
             <div class="signin-card">
                 <h2>Entrar</h2>
                 <form (ngSubmit)="onSubmit()" [formGroup]="signinForm">
-                    <div class="toggle-password">
-                        @if (isPasswordVisible) {
-                            <span class="pi pi-eye" (click)="togglePasswordVisibility()"></span>
-                        } @else {
-                            <span class="pi pi-eye-slash" (click)="togglePasswordVisibility()"></span>
-                        }
-                    </div>
                     <div class="p-field">   
                         <label for="email">Email</label>
                         <input id="email" type="text" pInputText placeholder="Email" formControlName="email" required email />
                     </div>
                     <div class="p-field">
                         <label for="password">Senha</label>
-                        <input id="password" [type]="isPasswordVisible ? 'text' : 'password'" pInputText placeholder="Senha" formControlName="password" required minlength="6" />
-
+                        <p-iconfield iconPosition="right">
+                            <input id="password" [type]="isPasswordVisible ? 'text' : 'password'" pInputText placeholder="Senha" formControlName="password" required minlength="6" />
+                            @if(isPasswordVisible) {
+                                <p-inputicon class="pi pi-eye" (click)="togglePasswordVisibility()"></p-inputicon>
+                            } @else {
+                                <p-inputicon class="pi pi-eye-slash" (click)="togglePasswordVisibility()"></p-inputicon>
+                            }
+                        </p-iconfield>
                     </div>
                     <button pButton type="submit" label="Entrar" [disabled]="!signinForm.valid"></button>
                     <div class="register-link">
