--- a/src/app/modules/global/pages/register/register.html
+++ b/src/app/modules/global/pages/register/register.html
@@ -10,13 +10,6 @@
             <div class="register-card">
                 <h2>Registrar</h2>
                 <form (ngSubmit)="onSubmit()" [formGroup]="registerForm">
-                    <div class="toggle-password">
-                        @if (isPasswordVisible) {
-                            <span class="pi pi-eye" (click)="togglePasswordVisibility()"></span>
-                        } @else {
-                            <span class="pi pi-eye-slash" (click)="togglePasswordVisibility()"></span>
-                        }
-                    </div>
                     <div class="p-field">   
                         <label for="name">Nome de usuário</label>
                         <input id="name" type="text" pInputText placeholder="Nome de usuário" formControlName="username" required minlength="3" />
@@ -31,7 +24,14 @@
                     </div>
                     <div class="p-field">
                         <label for="password">Senha</label>
-                        <input id="password" [type]="isPasswordVisible ? 'text' : 'password'" pInputText placeholder="Senha" formControlName="password" required minlength="6" />
+                        <p-iconfield iconPosition="right">
+                            <input id="password" [type]="isPasswordVisible ? 'text' : 'password'" pInputText placeholder="Senha" formControlName="password" required minlength="6" />
+                            @if(isPasswordVisible) {
+                                <p-inputicon class="pi pi-eye" (click)="togglePasswordVisibility()"></p-inputicon>
+                            } @else {
+                                <p-inputicon class="pi pi-eye-slash" (click)="togglePasswordVisibility()"></p-inputicon>
+                            }
+                        </p-iconfield>
                     </div>
                     <button pButton type="submit" label="Registrar" [disabled]="!registerForm.valid"></button>
                     <div class="login-link">
